fixed swagger router
