# app/routers/portfolio/portfolio.router.js
@@ -24,6 +24,7 @@ const {
 } = require("./portfolio.middleware");
 
 module.exports = router;
+
 router.get('/',                          getall);
 router.post('/create',                   create);
 router.get('/@:lng',                     getByLng);
@@ -31,7 +32,7 @@ router.put('/update/:id',                checkId, update);
 router.put('/updateimg/:id',             checkId,upload.single('file'), isImage,createImage);
 router.post('/create/image/:id',         checkId,upload.single('file'), isImage,createImage);
 router.post('/creategallery/:id',        checkId,upload.array('file', 12),checkFileEmpty,isImage,addGallery);
-router.delete('/delete/:id' ,            checkId,remove);
-router.delete('/delete/tags/:id',            removeTags);
+router.delete('/delete/gallery/:gallery',checkId,removeGallery);
 router.delete('/delete/platform/:id',    removePlatform);
-router.delete('/delete/gallery/:gallery',  checkId,removeGallery);
+router.delete('/delete/tags/:id',        removeTags);
+router.delete('/delete/:id' ,            checkId,remove);
